# mail-postal-sender

./: Cargo.toml  Dockerfile  README.md  email_list.txt  email_template.html  postal_sender.py  production_run.sh  push_to_git.sh  requirements.txt  test_run.sh  ubuntu_pull_and_run.sh  ubuntu_setup.sh
test/: test2.html
