[package]
name = "postal-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
